--- a/furniture/src/index.css
+++ b/furniture/src/index.css
@@ -12,25 +12,26 @@
 
 :root {
   --main-font: 'Raleway', sans-serif;
-  --second-font:'GFS Didot', serif;
+  --second-font: 'GFS Didot', serif;
   --txt-color-white: #ffffff;
-  --main-bg: #EAE6DF;  
-  --main-button-txt:#EAE6DF;
+  --main-bg: #EAE6DF;
+  --main-button-txt: #EAE6DF;
   --txt-color-dark: #2D2D2B;
-  --main-input-bg:#EAE6DF;
-  --border-color:#D4C8BE;
+  --main-input-bg: #EAE6DF;
+  --border-color: #D4C8BE;
   --btn-bg-color: #B8926A;
-  --hover-btn-bg-color:#A5825D;
-  --disabled-btn-bg:#B0B0B0;
-  --secondary-btn-br-color:#B8926A;
-  --secondary-btn-disabled-br-color:#B0B0B0;
-  --secondary-btn-color:#B8926A;
-  --secondary-btn-hover-color:#A5825D;
-  --scondary-btn-disabled-color:#B0B0B0;
-  --dropdown-text-color:#B8926A;
-  --dropdown-bg-color:#EAE6DF;
-  --dropdown-br-color:#B8926A;
+  --hover-btn-bg-color: #A5825D;
+  --disabled-btn-bg: #B0B0B0;
+  --secondary-btn-br-color: #B8926A;
+  --secondary-btn-disabled-br-color: #B0B0B0;
+  --secondary-btn-color: #B8926A;
+  --secondary-btn-hover-color: #A5825D;
+  --scondary-btn-disabled-color: #B0B0B0;
+  --dropdown-text-color: #B8926A;
+  --dropdown-bg-color: #EAE6DF;
+  --dropdown-br-color: #B8926A;
 }
+
 body {
   font-family: var(--main-font);
   font-size: 1.6rem;
@@ -40,6 +41,7 @@ body {
   background: var(--main-bg);
 
 }
+
 html {
   font-size: 62.5%;
   box-sizing: border-box;
@@ -50,14 +52,17 @@ html {
   width: 100%;
   margin: auto;
 }
+
 a {
   text-decoration: none;
   transition: all 0.4s linear !important;
 }
+
 ul,
 ol {
   list-style: none;
 }
+
 img {
   width: 100%;
   height: 100%;
@@ -68,6 +73,7 @@ img {
 h1 {
   font-size: 7.2rem;
 }
+
 h1,
 h2,
 h3,
@@ -75,22 +81,35 @@ h4 {
   font-family: var(--second-font);
   font-weight: 700;
 }
+
 h2 {
   font-family: var(--second-font);
   font-size: 6.4rem;
 }
+
 h3 {
   font-size: 4.8rem;
 }
+
 h4 {
   font-size: 2.4rem;
 }
 
 .btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
   width: 33rem;
   height: 5.3rem;
   flex-shrink: 0;
+  border-radius: 1rem;
+  color: var(--main-button-txt);
+  background: var(--btn-bg-color);
+  cursor: pointer;
+
 }
 
-
-
+.btn:hover {
+  background: var(--hover-btn-bg-color);
+}
