--- a/furniture/src/components/Navbar/Navbar.scss
+++ b/furniture/src/components/Navbar/Navbar.scss
@@ -1,23 +1,57 @@
 .navbar {
-	width: 100%;
-	gap: 2rem;
-	padding: 2rem 0;
-}
-.menu__list {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
-	gap: 5.5rem;
-	
-}
-.menu__list--item {
-	a {
-		border-bottom: 2px solid transparent;
-		&.active{
-			border-bottom-color: #B8926A;
+	padding: 2rem;
+
+	.active {
+		&::before {
+			content: "";
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			bottom: -6px;
+			left: 0;
+			background-color: var(--secondary-btn-br-color);
+			visibility: visible;
+			transition: all 0.3s ease-in-out 0s;
 		}
-		color: var(--main-text-color);
-		font-size: 1.6rem;
-		line-height: 2rem;
+	}
+
+	.menu__list {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 5rem;
+
+		.menu__list--item {
+			position: relative;
+
+			a::before {
+				content: "";
+				position: absolute;
+				width: 100%;
+				height: 2px;
+				bottom: -6px;
+				left: 0;
+				width: 0;
+				background-color: var(--secondary-btn-br-color);
+				visibility: hidden;
+				transition: all 0.3s ease-in-out 0s;
+			}
+
+			a:hover::before {
+				content: "";
+				position: absolute;
+				width: 0;
+				width: 100%;
+				height: 2px;
+				bottom: -6px;
+				left: 0;
+				background-color: var(--secondary-btn-br-color);
+				visibility: visible;
+				transition: all 0.3s ease-in-out 0s;
+			}
+		}
 	}
 }
