--- a/furniture/src/components/PrimaryButton/primaryButton.scss
+++ b/furniture/src/components/PrimaryButton/primaryButton.scss
@@ -1,4 +1,4 @@
-.btn {
+.primary__btn {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,6 +13,11 @@
     &:hover{
       background: var(--hover-btn-bg-color);
     }
-  
+    
+    &:disabled{
+      background: var(--disabled-btn-bg);
+      color: var(--disabled-btn-color);
+      cursor: not-allowed;
+    }
   }
   
