--- a/furniture/src/index.css
+++ b/furniture/src/index.css
@@ -12,7 +12,7 @@
 
 :root {
   --main-font: 'Raleway', sans-serif;
-  --second-font: 'GFS Didot', serif;
+  --second-font: 'Didot', serif;
   --txt-color-white: #ffffff;
   --main-bg: #EAE6DF;
   --main-button-txt: #EAE6DF;
@@ -94,6 +94,14 @@ h3 {
 
 h4 {
   font-size: 2.4rem;
+}
+
+
+.head {
+  font-family: var(--second-font);
+  font-size: 4.8rem;
+  font-weight: 700;
+  padding-bottom: 3rem !important;
 }
 
 .btn{
