--- a/furniture/src/components/ProductList/productList.module.scss
+++ b/furniture/src/components/ProductList/productList.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 4rem 0;
 
     &--action {
       color: var(--btn-bg-color);
