--- a/furniture/src/components/AboutUs/aboutUs.module.scss
+++ b/furniture/src/components/AboutUs/aboutUs.module.scss
@@ -4,7 +4,7 @@
         justify-content: space-between;
         padding-bottom: 14rem;
 
-        .about__img {
+        &__img {
             width: 68rem;
             height: 41.2rem;
             border-radius: 300px 5px 5px 5px;
@@ -14,7 +14,7 @@
             }
         }
 
-        .about__text {
+       &__text {
             width: 56.3rem;
             font-variant-numeric: lining-nums proportional-nums;
             padding-bottom: 3rem;
