--- a/furniture/src/index.css
+++ b/furniture/src/index.css
@@ -96,15 +96,6 @@ h4 {
   font-size: 2.4rem;
 }
 
-
-.head {
-  font-family: var(--second-font);
-  font-size: 4.8rem;
-  font-weight: 700;
-  padding-bottom: 3rem !important;
-
-}
-
 .btn{
   width: 33rem;
   height: 5.3rem;
@@ -115,4 +106,19 @@ h4 {
   border-radius: 1rem;
   cursor: pointer;
   text-transform: uppercase;
+}
+
+.head {
+  font-family: var(--second-font);
+  font-size: 4.8rem;
+  font-weight: 700;
+  padding: 3rem 0 !important;
+}
+.header__link {
+  display: flex;
+  gap: 1rem;
+  line-height: 2rem; 
+ }
+.home__txt--opacty{
+  opacity: 0.5;
 }
