--- a/furniture/src/index.css
+++ b/furniture/src/index.css
@@ -20,6 +20,7 @@
   --main-input-bg: #EAE6DF;
   --border-color: #D4C8BE;
   --btn-bg-color: #B8926A;
+  --txt--color: #B8926A;
   --footer-txt-color: #717171;
   --hover-btn-bg-color: #A5825D;
   --disabled-btn-color: #EAE6DF;
