--- a/furniture/src/components/Discount/discount.module.scss
+++ b/furniture/src/components/Discount/discount.module.scss
@@ -1,5 +1,5 @@
 .discount {
-  width: 100%;
+  max-width: 100%;
   height: 36.7rem;
   display: flex;
   align-items: center;
@@ -16,7 +16,7 @@
     font-weight: 700;
   }
   p {
-    width: 44.5rem;
+    max-width: 44.5rem;
     color: var(--txt-color-white);
     text-align: center;
     line-height: 2.4rem;
