--- a/furniture/src/components/Navbar/Navbar.scss
+++ b/furniture/src/components/Navbar/Navbar.scss
@@ -1,57 +1,47 @@
 .navbar {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: center;
-	padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
 
-	.active {
-		&::before {
-			content: "";
-			position: absolute;
-			width: 100%;
-			height: 2px;
-			bottom: -6px;
-			left: 0;
-			background-color: var(--secondary-btn-br-color);
+  .menu__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+
+    .menu__list--item {
+      position: relative;
+      a::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: -6px;
+        left: 0;
+        width: 0;
+        background-color: var(--secondary-btn-br-color);
+        visibility: hidden;
+        transition: all 0.3s ease-in-out 0s;
+      }
+
+      a.active::before {
+		width: 100%;
 			visibility: visible;
-			transition: all 0.3s ease-in-out 0s;
-		}
-	}
+      }
 
-	.menu__list {
-		display: flex;
-		flex-wrap: wrap;
-		gap: 5rem;
-
-		.menu__list--item {
-			position: relative;
-
-			a::before {
-				content: "";
-				position: absolute;
-				width: 100%;
-				height: 2px;
-				bottom: -6px;
-				left: 0;
-				width: 0;
-				background-color: var(--secondary-btn-br-color);
-				visibility: hidden;
-				transition: all 0.3s ease-in-out 0s;
-			}
-
-			a:hover::before {
-				content: "";
-				position: absolute;
-				width: 0;
-				width: 100%;
-				height: 2px;
-				bottom: -6px;
-				left: 0;
-				background-color: var(--secondary-btn-br-color);
-				visibility: visible;
-				transition: all 0.3s ease-in-out 0s;
-			}
-		}
-	}
+      a:hover::before {
+        content: "";
+        position: absolute;
+        width: 0;
+        width: 100%;
+        height: 2px;
+        bottom: -6px;
+        left: 0;
+        background-color: var(--secondary-btn-br-color);
+        visibility: visible;
+        transition: all 0.3s ease-in-out 0s;
+      }
+    }
+  }
 }
