--- a/furniture/src/components/Stats/stats.module.scss
+++ b/furniture/src/components/Stats/stats.module.scss
@@ -1,4 +1,6 @@
 .stats {
+  max-width: 110rem;
+  margin: auto;
     padding-bottom: 12rem;
   &__content {
     display: flex;
@@ -13,8 +15,6 @@
       text-align: center;
       justify-content: space-between;
       gap: 1rem;
-
-
       h2 {
         color: var(--txt--color);
         text-align: center;
