--- a/furniture/src/index.css
+++ b/furniture/src/index.css
@@ -33,6 +33,7 @@
   --dropdown-text-color: #B8926A;
   --dropdown-bg-color: #EAE6DF;
   --dropdown-br-color: #B8926A;
+  --input-txt-color:#B0B0B0;
 }
 
 body {
