--- a/furniture/src/components/mainHeader/mainHeader.module.scss
+++ b/furniture/src/components/mainHeader/mainHeader.module.scss
@@ -4,6 +4,7 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: end;
+    padding-bottom: 6rem;
 
     &--title {
         position: absolute;
