--- a/furniture/src/index.css
+++ b/furniture/src/index.css
@@ -57,7 +57,7 @@ html {
 }
 
 a {
-  color: var(--main-text-color);
+  color: var(--txt-color-dark);
   text-decoration: none;
   transition: all 0.4s linear !important;
 }
@@ -109,14 +109,10 @@ h4 {
   text-transform: uppercase;
 }
 
-.head {
+/* .head {
   font-family: var(--second-font);
   font-size: 4.8rem;
   font-weight: 700;
-  padding: 3rem 0 !important;
-}
-.header__link {
-  display: flex;
-  gap: 1rem;
-  line-height: 2rem; 
- }
+  padding: 6rem 0 !important;
+} */
+
