--- a/furniture/src/components/Slider/CategorySlider/categorySlider.scss
+++ b/furniture/src/components/Slider/CategorySlider/categorySlider.scss
@@ -1,4 +1,5 @@
 .slider {
+    
     .slick-dots {
         bottom: -60px !important;
         display: flex !important;
@@ -50,6 +51,7 @@
     }
 
     .category__slider--item {
+        width: 33rem;
         height: 19.3rem;
         position: relative;
 
@@ -62,6 +64,7 @@
             height: 20%;
             backdrop-filter: blur(7.5px);
             border-radius: 0 0 1rem 1rem;
+            overflow: hidden;
         }
 
         img {
@@ -84,6 +87,8 @@
         .slick-dots {
             bottom: -30px !important;
             display: block !important;
+        
+
 
             li {
                 display: inline-block !important;
@@ -95,6 +100,9 @@
                 height: 20px !important;
                 content: '•' !important;
                 background: none !important;
+                color: var(  --btn-bg-color);
+              
+                
             }
         }
     }
