--- a/furniture/src/index.css
+++ b/furniture/src/index.css
@@ -70,8 +70,7 @@ ol {
 img {
   width: 100%;
   height: 100%;
-  display: block;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 h1 {
@@ -109,10 +108,5 @@ h4 {
   text-transform: uppercase;
 }
 
-/* .head {
-  font-family: var(--second-font);
-  font-size: 4.8rem;
-  font-weight: 700;
-  padding: 6rem 0 !important;
-} */
+
 
