--- a/furniture/src/components/ContactContent/contact.module.scss
+++ b/furniture/src/components/ContactContent/contact.module.scss
@@ -14,6 +14,7 @@
       border: 1px solid var(--border-color);
       display: block;
       margin: 1.5rem 0;
+      resize: none;
     }
 
     textarea {
