--- a/furniture/src/components/mainHeader/mainHeader.module.scss
+++ b/furniture/src/components/mainHeader/mainHeader.module.scss
@@ -1,64 +1,92 @@
 .main__header {
-    display: flex;
+  display: flex;
+  position: relative;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: end;
+  padding-bottom: 6rem;
+
+  &--title {
+    position: absolute;
+    max-width: 81rem;
+    width: 100%;
+    z-index: 1;
+    left: 0;
+
+    &--text {
+      padding-bottom: 3rem;
+
+      h1 {
+        font-family: var(--second-font);
+        font-size: 7.2rem;
+        font-weight: 700;
+      }
+    }
+
+    &--desc {
+      max-width: 44.3rem;
+      width: 100%;
+      padding-bottom: 3rem;
+
+      p {
+        color: var(--txt-color-dark);
+        font-variant-numeric: lining-nums proportional-nums;
+        line-height: 2.4rem;
+      }
+    }
+  }
+  &--btn {
+    width: 33rem !important;
+  }
+
+  &--image {
     position: relative;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: end;
-    padding-bottom: 6rem;
+    max-width: 93.6rem;
+    img {
+      border-radius: 1rem;
+    }
 
+    &::after {
+      content: "";
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(5.5px);
+      position: absolute;
+      width: 30%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      border-radius: 1rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .main__header {
     &--title {
-        position: absolute;
-        max-width: 81rem;
-        z-index: 1;
-        left: 0;
-
-
-        &--text {
-            padding-bottom: 3rem;
-
-            h1 {
-                font-family: var(--second-font);
-                font-size: 7.2rem;
-                font-weight: 700;
-            }
+        max-width: 27rem;
+        width: 100%;
+        left: 5rem;
+      &--text {
+        h1 {
+          font-size: 3.2rem;
         }
 
-        &--desc {
-            max-width: 44.3rem;
+          &--desc {
+            width: 43.2rem;
             padding-bottom: 3rem;
-
             p {
-                color: var(--txt-color-dark);
-                font-variant-numeric: lining-nums proportional-nums;
-                line-height: 2.4rem;
-
+            
+              
+              line-height: 2.4rem;
             }
+          }
         }
-    }
-    &--btn{
-        width: 33rem !important;
-    }
-
-    &--image {
-        position: relative;
-        max-width: 93.6rem;
-        img{
-            border-radius: 1rem;
+        &--btn {
+          width: 26rem !important;
         }
-        
 
-        &::after {
-            content: "";
-            background: rgba(255, 255, 255, 0.10);
-            backdrop-filter: blur(5.5px);
-            position: absolute;
-            width: 30%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            border-radius: 1rem;
-
-        }
+       
+      
     }
-
+  }
 }
