--- a/furniture/src/components/ProductList/productList.module.scss
+++ b/furniture/src/components/ProductList/productList.module.scss
@@ -1,23 +1,29 @@
-.product {
+.product__main {
+  padding-top: 13rem;
+  .product {
+    &__secthead {
+      display: flex;
+      align-items: center;
+      padding-top: 10rem;
+      padding-bottom: 5rem;
 
-  &__secthead {
-    display: flex;
-    align-items: center;
-    justify-content: end;
+      &--action {
+        display: flex;
+        justify-content: end;
+        width: 100%;
 
-    &--action {
-   
-      a{
-        color: var(--btn-bg-color);
-      text-decoration: underline;
-
+        a {
+          color: var(--btn-bg-color);
+          text-decoration: underline;
+          text-align: center;
+        }
       }
     }
-  }
-  &__grid{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    row-gap: 3rem;
-    column-gap: 1.8rem;
+    &__grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+      row-gap: 3rem;
+      column-gap: 1.8rem;
+    }
   }
 }
