Fixed: product db.json

--- a/furniture/src/components/Title/title.scss
+++ b/furniture/src/components/Title/title.scss
@@ -4,6 +4,7 @@
   font-weight: 700;
   line-height: 5.2rem;
   font-family: var(--second-font);
+  text-transform: uppercase;
 }
 
 @media (max-width: 768px) {
