--- a/furniture/src/components/ProductSlider/productSlider.scss
+++ b/furniture/src/components/ProductSlider/productSlider.scss
@@ -4,4 +4,54 @@
     &--item{
         padding-bottom: 5rem;
     }
+
+        .product__grid__item {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+        row-gap: 3rem;
+        column-gap: 1.8rem;
+  
+        .card {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+  
+          &__img {
+            max-width: 33rem;
+            width: 100%;
+            height: 26.7rem;
+            object-fit: contain;
+            position: relative;
+            img {
+              border-radius: 1rem;
+            }
+          }
+  
+          &__wishList {
+            position: absolute;
+            max-width: 4.8rem;
+            width: 100%;
+            height: 3.8rem;
+            background-color: var(--main-bg);
+            display: grid;
+            place-items: center;
+            right: 7px;
+            top: 1.1rem;
+            border-radius: 5px;
+          }
+          &__name {
+            font-size: 2rem;
+            font-weight: 500;
+            line-height: 2.8rem;
+            max-width: 33rem;
+            color: var(--txt-color-dark);
+          }
+  
+          &__price {
+            font-size: 2rem;
+            font-weight: 700;
+            color: var(--dropdown-text-color);
+          }
+        }
+      }
 }
