--- a/furniture/src/components/CollectionCard/collectionCard.module.scss
+++ b/furniture/src/components/CollectionCard/collectionCard.module.scss
@@ -2,25 +2,59 @@
   .collection__main {
     &--header {
       padding-top: 5rem;
-      &--title {
-        font-family: Didot;
-        font-size: 64px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 52px;
-      }
+
       p {
-        width: 563px;
-        height: 73px;
+        padding-top: 4rem;
+        padding-bottom: 4.4rem;
+        width: 56.3rem;
+      }
+      &--title {
+        font-family: var(--second-font);
+        font-size: 6.4rem;
+        font-weight: 700;
+        line-height: 5.2rem;
       }
     }
     &--content {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+      row-gap: 3rem;
+      column-gap: 1.8rem;
       &__item {
-        width: 44.6rem;
+        max-width: 44.6rem;
+        width: 100%;
         height: 26.7rem;
-
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
         img {
+          border-radius: 1rem;
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -1px;
+          left: 0;
           width: 100%;
+          height: 20%;
+          backdrop-filter: blur(10.5px);
+          border-radius: 0 0 1rem 1rem;
+          overflow: hidden;
+        }
+
+        &--name {
+          color: var(--txt-color-white);
+          font-size: 2rem;
+          font-weight: 600;
+          width: 100%;
+          position: absolute;
+          z-index: 1;
+          top: 90%;
+          left: 50%;
+          text-align: center;
+          transform: translate(-50%, -50%);
         }
       }
     }
