Fixed mainHeader responsive

--- a/furniture/src/components/AboutUs/aboutUs.module.scss
+++ b/furniture/src/components/AboutUs/aboutUs.module.scss
@@ -1,4 +1,4 @@
-.about__main{
+.about__main {
   padding-top: 5rem;
   .about {
     display: flex;
@@ -7,7 +7,7 @@
     justify-content: space-between;
     padding-bottom: 14rem;
     padding-top: 3rem;
-  
+
     &__img {
       width: 68rem;
       height: 41.2rem;
@@ -17,7 +17,7 @@
         object-fit: cover;
       }
     }
-  
+
     &__text {
       max-width: 56.3rem;
       width: 100%;
@@ -30,31 +30,40 @@
   }
 }
 
-
-
 @media screen and (max-width: 1250px) {
-  .about {
-    display: flex !important;
-    flex-wrap: wrap !important;
-    align-items: center !important;
-    justify-content: space-between !important;
-    padding-bottom: 14rem !important;
-    padding-top: 3rem !important;
+  .about__main {
+    .about {
+      display: flex !important;
+      flex-wrap: wrap !important;
+      align-items: center !important;
+      justify-content: space-between !important;
+      padding-bottom: 8rem !important;
+      padding-top: 0 !important;
+      &__img {
+        width: 59.2rem;
+        margin-left: 3rem;
+      }
 
-    &__img {
-      width: 59.2rem;
-      margin-left: 3rem;
-    }
-
-    &__text {
-      padding-top: 3rem;
-      margin-left: 3rem;
-      p {
-        line-height: 2.4rem;
+      &__text {
+        padding-top: 3rem;
+        margin-left: 3rem;
+        p {
+          line-height: 2.4rem;
+        }
+      }
+      &__btn {
+        margin-left: 3rem;
       }
     }
-    &__btn {
-      margin-left: 3rem;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .about__main {
+    .about {
+      padding-bottom: 8rem !important;
+  
     }
   }
 }
