--- a/furniture/src/index.css
+++ b/furniture/src/index.css
@@ -117,3 +117,21 @@ h4 {
     }
   
 }
+@media screen and (max-width: 550px) {
+  .btn{
+    width: 20rem;
+    height: 4.3rem;
+    gap: 1rem;
+
+  }
+
+}
+@media screen and (max-width: 350px) {
+  .btn{
+    width: 20rem;
+    height: 4.3rem;
+    gap: 1rem;
+
+  }
+
+}
