--- a/furniture/src/components/mainHeader/mainHeader.module.scss
+++ b/furniture/src/components/mainHeader/mainHeader.module.scss
@@ -63,29 +63,64 @@
 @media screen and (max-width: 1200px) {
   .main__header {
     &--title {
-        max-width: 27rem;
-        width: 100%;
-        left: 5rem;
+      max-width: 27rem;
+      width: 100%;
+      left: 5rem;
       &--text {
         h1 {
           font-size: 3.2rem;
         }
 
-          &--desc {
-            width: 43.2rem;
-            padding-bottom: 3rem;
-            p {
-            
-              
-              line-height: 2.4rem;
-            }
+        &--desc {
+          width: 43.2rem;
+          padding-bottom: 3rem;
+          p {
+            line-height: 2.4rem;
           }
         }
-        &--btn {
-          width: 26rem !important;
-        }
+      }
+      &--btn {
+        width: 26rem !important;
+      }
+    }
+  }
+}
 
-       
+
+@media screen and (max-width: 576px) {
+  .main__header {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0;
+
+    &--title {
+      max-width: 100%;
+      position: relative;
+      left: auto;
+      margin-bottom: 3rem;
+
+      &--text {
+        width: 28.8rem;
+        height: 10.2rem;
+        line-height: 3.6rem;
+        font-size: 3.2rem;
+        margin: 0;
+      }
+
+      &--desc {
+        width: 100%;
+        margin-top: 2.4rem;
+        line-height: 2.4rem;
+      }
+    }
+
+    &--image {
+      max-width: 100%;
+      position: relative;
+
+      &::after {
+        display: none;
+      }
       
     }
   }
