--- a/furniture/src/pages/Page404/notFound.scss
+++ b/furniture/src/pages/Page404/notFound.scss
@@ -7,8 +7,7 @@
   .notFound--item {
     text-align: center;
     h2 {
-      width: 31.5rem;
-      font-family: Didot;
+      font-family: var(--second-font);
       font-size: 12rem;
       font-weight: 700;
     }
