--- a/furniture/src/components/ProductList/productList.scss
+++ b/furniture/src/components/ProductList/productList.scss
@@ -5,5 +5,6 @@
       grid-template-columns: repeat(auto-fill, minmax(27rem, 1fr));
       justify-content: center;
       gap: 2rem;
+      padding-top: 10rem;
     }
   }
