--- a/furniture/src/components/Profile/profile.scss
+++ b/furniture/src/components/Profile/profile.scss
@@ -2,14 +2,15 @@
   display: flex;
   flex-wrap: wrap;
   column-gap: 13.7rem;
-  margin-top: 4.9rem;
+
   .profile {
     max-width: 33rem;
     width: 100%;
     height: 32rem;
     padding: 3rem;
     border-radius: 1rem;
-    background-color: var(--second-bg-color);
+    background-color: var(  --second-bg-color);
+    ;
     .profile__title {
       font-family: var(--second-font);
       font-size: 3.2rem;
