--- a/furniture/src/components/Title/title.scss
+++ b/furniture/src/components/Title/title.scss
@@ -1,16 +1,22 @@
 .title {
-  color: var(--main-text-color);
-  font-size: 4.8rem;
-  font-weight: 700;
-  line-height: 5.2rem;
-  font-family: var(--second-font);
-  text-transform: uppercase;
-}
-
-@media (max-width: 768px) {
-  .title {
-    font-size: 3.2rem;
-    line-height: 3.6rem;
-    font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 4rem;
+  &__head {
+    color: var(--main-text-color);
+    font-family: Didot;
+    font-size: 4.8rem;
+    font-weight: 700;
+    line-height: 5.2rem;
+    text-transform: uppercase;
+  }
+  &--action {
+    a {
+      font-weight: 500;
+      line-height: 2rem;
+      text-decoration-line: underline;
+      color: #b8926a;
+    }
   }
 }
