--- a/furniture/src/components/CollectionSlider/collectionSlider.scss
+++ b/furniture/src/components/CollectionSlider/collectionSlider.scss
@@ -14,8 +14,7 @@
       text-align: center;
     }
   }
-}
-  .collection__slider--item {
+} .collection__slider--item {
     width: 33rem;
     height: 26.7rem;
     position: relative;
