--- a/furniture/src/components/Discount/discount.scss
+++ b/furniture/src/components/Discount/discount.scss
@@ -1,5 +1,5 @@
 .discount__area {
-    margin-bottom: 10rem;
+  margin-bottom: 10rem;
   .discount {
     height: 35.7rem;
     display: flex;
@@ -8,7 +8,7 @@
     justify-content: center;
 
     .discount__content {
-   
+      margin-bottom: 3rem;
 
       &--title {
         color: #fff;
@@ -25,6 +25,7 @@
         color: #fff;
         font-weight: 400;
         line-height: 2.4rem;
+        text-align: center;
       }
     }
   }
