--- a/furniture/src/components/Alert/alert.scss
+++ b/furniture/src/components/Alert/alert.scss
@@ -4,6 +4,10 @@
   background: var(--txt-color-white);
   display: flex;
   justify-content: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   .alert {
     position: relative;
