Created Register and Login page

--- a/furniture/src/components/Navbar/Navbar.scss
+++ b/furniture/src/components/Navbar/Navbar.scss
@@ -44,4 +44,15 @@
       }
     }
   }
+  
+  .hamburger{
+    display: none;
+}
+}
+
+
+@media (max-width: 768px) {
+  .menu__list {
+      gap: 3rem !important;
+  }
 }
